Fri Nov 22 17:48:03 EST 2002 	JKLowden
	* src/dblib/unittests/rpc.c src/dblib/unittests/Makefile.am
	- new unittest for as-yet nonfunctional dbrpc* functions
Fri Nov 22 23:10:38 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/query.c src/tds/unittests/dynamic1.c:
	- fix a BUG constructing prepare query for TDS7+
	- fix test for TDS7+

Fri Nov 22 22:30:43 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/token.c src/tds/unittests/dynamic1.c:
	- fix error handling PARAMFMT (row not allocated)
	- fix test (read prepare results)

Fri Nov 22 17:41:47 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* doc/userguide.sgml: update for ODBC

Fri Nov 22 16:39:53 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/unittests/common.c src/odbc/unittests/connect.c:
	* src/odbc/unittests/t0001.c src/odbc/unittests/t0004.c:
	* src/tds/unittests/dynamic1.c src/tds/unittests/t0003.c:
	* src/tds/unittests/t0004.c src/tds/unittests/t0006.c:
	* src/tds/unittests/t0007.c:
	- remove some warning

Fri Nov 22 14:18:32 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h src/tds/query.c:
	- implement RPC on TDS7+

Fri Nov 22 13:54:44 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/unittests/Makefile.am src/tds/unittests/common.c:
	* src/tds/unittests/common.h src/tds/unittests/t0004.c:
	* src/tds/unittests/t0005.c src/tds/unittests/t0006.c:
	* src/tds/unittests/dynamic1.c:
	- added test for dynamic query
	- moved run_query to common.c

Fri Nov 22 11:08:23 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h src/tds/Makefile.am src/tds/login.c:
	* src/tds/getmac.c (added):
	- start writing code to get real MAC for TDS7+

Fri Nov 22 10:49:19 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h src/tds/mem.c src/tds/token.c:
	- unified TDSRESULTINFO, TDSCOMPUTEINFO and TDSPARAMINFO
	- update some style (function declarations and comments)
	- put output parameters in correct places