@@ -1,6 +1,11 @@
-Fri Nov 22 17:48:03 EST 2002 	JKLowden
+Sat Nov 23 01:32:44 EST 2002	JK Lowden <jklowden@schemamania.org>
+	* include/sybdb.h src/dblib/rpc.c src/dblib/unittests/rpc.c
+	- more db-lib rpc preparation
+
+Fri Nov 22 17:48:03 EST 2002	JK Lowden <jklowden@schemamania.org>
 	* src/dblib/unittests/rpc.c src/dblib/unittests/Makefile.am
 	- new unittest for as-yet nonfunctional dbrpc* functions
+	
 Fri Nov 22 23:10:38 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
 	* src/tds/query.c src/tds/unittests/dynamic1.c:
 	- fix a BUG constructing prepare query for TDS7+
